--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -29,11 +29,12 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?color_snake=#007fff
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#007fff
+            dist/github-snake.svg?color_snake=#007fff
+            dist/github-snake-dark.svg?palette=github-dark&color_snake=#007fff
             dist/ocean.gif?color_snake=#007fff&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
           
           
       # push the content of <build_dir> to a branch
