--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -29,11 +29,11 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=lightblue
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=lightblue
-            dist/github-snake.svg?color_snake=lightblue
-            dist/github-snake-dark.svg?palette=github-dark&color_snake=lightblue
-            dist/ocean.gif?color_snake=lightblue&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/github-contribution-grid-snake.svg?color_snake=chartreuse(traditional)
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=chartreuse(traditional)
+            dist/github-snake.svg?color_snake=chartreuse(traditional)
+            dist/github-snake-dark.svg?palette=github-dark&color_snake=chartreuse(traditional)
+            dist/ocean.gif?color_snake=chartreuse(traditional)&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
           
           
       # push the content of <build_dir> to a branch
